Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4559

App crashes in Observer mode

XMLWordPrintable

    • 789cbfad6c7e6fd694041c3feaaaf0318fc9b209

      Take example from QTCREATORBUG-4438 . Click "Rating Indicator", then select observer mode, right click 'Inverted Colors' and select 'Item (2)'

      Assert: 'finder.result() != -1' in qpathclipper.cpp, line 782

      Stack trace

      0	qt_assert	qglobal.cpp	2028	0x7ffff4c5cbe7	
      1	QPathSegments::mergePoints	qpathclipper.cpp	782	0x7ffff55adfed	
      2	QWingedEdge::intersectAndAdd	qpathclipper.cpp	807	0x7ffff55ae28c	
      3	QWingedEdge	qpathclipper.cpp	878	0x7ffff55ae9a5	
      4	QPathClipper::clip	qpathclipper.cpp	1652	0x7ffff55b21e3	
      5	QPainterPath::united	qpainterpath.cpp	3181	0x7ffff55a6c8a	
      6	QPolygonF::united	qpolygon.cpp	949	0x7ffff55cbc30	
      7	QmlJSDebugger::LiveSelectionIndicator::addBoundingRectToPolygon	liveselectionindicator.cpp	93	0x42b8b7	
      8	QmlJSDebugger::LiveSelectionIndicator::addBoundingRectToPolygon	liveselectionindicator.cpp	98	0x42bae1	
      9	QmlJSDebugger::LiveSelectionIndicator::addBoundingRectToPolygon	liveselectionindicator.cpp	98	0x42bae1	
      10	QmlJSDebugger::LiveSelectionIndicator::addBoundingRectToPolygon	liveselectionindicator.cpp	98	0x42bae1	
      11	QmlJSDebugger::LiveSelectionIndicator::addBoundingRectToPolygon	liveselectionindicator.cpp	98	0x42bae1	
      12	QmlJSDebugger::LiveSelectionIndicator::addBoundingRectToPolygon	liveselectionindicator.cpp	98	0x42bae1	
      13	QmlJSDebugger::LiveSelectionIndicator::addBoundingRectToPolygon	liveselectionindicator.cpp	98	0x42bae1	
      14	QmlJSDebugger::LiveSelectionIndicator::addBoundingRectToPolygon	liveselectionindicator.cpp	98	0x42bae1	
      15	QmlJSDebugger::LiveSelectionIndicator::addBoundingRectToPolygon	liveselectionindicator.cpp	98	0x42bae1	
      16	QmlJSDebugger::LiveSelectionIndicator::setItems	liveselectionindicator.cpp	121	0x42c7c4	
      17	QmlJSDebugger::LiveSelectionTool::selectedItemsChanged	liveselectiontool.cpp	407	0x427f57	
      18	QmlJSDebugger::AbstractLiveEditTool::updateSelectedItems	abstractliveedittool.cpp	72	0x4247f4	
      19	QmlJSDebugger::QDeclarativeViewObserverPrivate::setSelectedItemsForTools	qdeclarativeviewobserver.cpp	597	0x41d3ea	
      20	QmlJSDebugger::QDeclarativeViewObserverPrivate::setSelectedItems	qdeclarativeviewobserver.cpp	603	0x41d8dd	
      

      In LiveSelectionIndicator::addBoundingRectToPolygon we're calling 'united' for two QPolygonF. For the crash, one of the polygons as 'infinite' points in it. This comes from the boundingRect of one of the elements, which is already of size 'QRectF(0,0 infx12)'

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lindeije Thorbjørn Lindeijer (closed Nokia identity) (Inactive)
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes